corrected the input styling on iPhones

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: "Nunito", sans-serif;
 }
 
-body {
+body, html {
     background-image:  linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/Background-1.jpg');
     height: 100vh;
     background-repeat: no-repeat;
@@ -221,9 +221,9 @@ button svg {
 }
 
 @media only screen and (max-width: 450px) {
-    body {
+    body, html {
         background-image: url('images/background-2.jpg');
-        height: 100%;
+        height: 115%;
     }
 
     .fullLocation {
